--- a/爬虫笔记+源码/第四章 提取数据/我这有美味的汤，你喝吗？.md
+++ b/爬虫笔记+源码/第四章 提取数据/我这有美味的汤，你喝吗？.md
@@ -1,5 +1,3 @@
-
-
 # 使用Beautiful Soup
 
 在前面的文章中已经讲过了正则表达式的使用方法了，但是如果正则表达式出现问题，那么得到的结果就不是我们想要的内容。熟悉前端的朋友肯定知道，对于一个网页来说，都有一定的特殊结构和层级关系，而且很多节点都用id和class来区分。所以可以借助网页的结构和属性来提取数据。
@@ -618,3 +616,171 @@ print(type(soup.select('ul')[0]))
 试着运行上面的代码，查看运行结果之后，很多内容你就明白了。
 
 最后一句输出列表中元素的类型，你会发现依然还是Tag类型。
+
+### 嵌套选择
+
+select( )方法同样支持嵌套选择，例如，会选择所有的ul节点，在对ul节点进行遍历，选择li节点。
+
+与上面的html文本相同，具体代码如下所示：
+
+```python
+from bs4 import BeautifulSoup
+soup = BeautifulSoup(html_doc, 'lxml')
+for ul in soup.select('ul'):
+    print(ul.select('li'))
+```
+
+试着运行上面的结果，输出所有ul节点下的所有li节点组成的列表。
+
+### 获取属性
+
+从上面的几个例子中相信大家应该明白了，所有的节点类型都是Tag类型，所以获取属性依然可以使用以前的方法，仍然是上面的HTML文本，这里尝试获取每个ul节点下的id属性。
+
+具体代码示例如下所示：
+
+```python
+from bs4 import BeautifulSoup
+soup = BeautifulSoup(html_doc, 'lxml')
+for ul in soup.select('ul'):
+    print(ul['id'])
+    print(ul.attrs['id'])
+```
+
+从上面的代码可以看出，可以直接向中括号传入属性名，或者通过attrs属性获取属性值。
+
+### 获取文本
+
+要获取文本除了之前所说的string属性，另外，还可以调用get_text()方法。
+
+依然还是前面的html文本具体代码示例如下所示：
+
+```python
+from bs4 import BeautifulSoup
+soup = BeautifulSoup(html_doc, 'lxml')
+for li in soup.select('li'):
+    print('String:', li.string)
+    print('get text:', li.get_text())
+```
+
+## 小结
+
+Beautiful Soup到这里基本上就结束了。
+
+在编写爬虫的时候一般使用find_all( )和find( )方法获取指定节点。
+
+如果对css选择器熟悉的话也可以使用select( )方法。
+
+# 实战
+
+## 前言
+
+如果你看到了这里，那么恭喜你完成了很多人不能做到的坚持，因为很少人能够看完上面杂而多的知识。
+
+这次的实战内容，我带来的是爬取B站视频弹幕。
+
+为什么是这个实战内容呢？很简单就是为了迎合我们刚刚学完的Beautiful Soup。
+
+## 准备工作
+
+**工欲善其事，必先利其器**，写爬虫也是同样的道理。
+
+首先，安装好两个必要的库：requests, bs4
+
+```
+pip install requests
+pip install bs4
+```
+
+## 关于B站弹幕限制
+
+以前B站的弹幕很快可以通过抓包获取到，但是现在B站有了限制，就获取不到了，不过不用担心，我拿到以前的API接口依然是可以获取到B站弹幕的。
+
+## 爬取内容
+
+在2020年的最后一天，郭敬明和于正在早期由于抄袭分别向庄羽和琼瑶道歉。当时看了一下还上了微博的热搜。
+
+所以，我今天就默默的打开B站，看看UP主们是怎么样分析这次道歉的以及观众对这次分析发表的言论，所有就来爬取视频的弹幕。
+
+视频链接如下：
+
+`https://www.bilibili.com/video/BV1XK411M7ka?from=search&seid=17596321343783034307`
+
+## 需求分析
+
+### 获取弹幕API接口
+
+![](https://routing-ospf.oss-cn-beijing.aliyuncs.com/image-20210107103523428.png)
+
+通过抓包，我们需要的获取内容就是**oid**信息。
+
+我拿了以前的API接口，进行获取弹幕，现在我也将这个接口分享给大家。
+
+```
+https://api.bilibili.com/x/v1/dm/list.so?oid=276746872
+```
+
+每一个视频的弹幕都可以通过修改oid的值去获取。
+
+将上面的链接输入到浏览器就会可以看到弹幕信息了。
+
+![](https://routing-ospf.oss-cn-beijing.aliyuncs.com/image-20210107104421424.png)
+
+### 爬取弹幕
+
+既然我们在上面所讲的内容是Beautiful Soup，那肯定是通过Beautiful Soup进行数据解析，文本内容保存下来。获取弹幕的写法肯定会有很多种，我在下面就先列出一种。
+
+## 功能实现
+
+同样的，我们需要对上面的链接发起请求。再通过Beautiful Soup获取文本内容，保存至txt文档。
+
+## 具体代码
+
+```python
+import requests
+from bs4 import BeautifulSoup
+
+
+class DanMu(object):
+    def __init__(self):
+        self.headers = {
+            'user-agent': 'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/87.0.4280.66 Safari/537.36'
+        }
+        self.url = 'https://api.bilibili.com/x/v1/dm/list.so?oid=276746872'
+
+    # 获取网页信息
+    def get_html(self):
+        response = requests.get(self.url, headers=self.headers)
+        html = response.content.decode('utf-8')
+        return html
+
+    # 保存弹幕
+    def get_info(self):
+        html = self.get_html()
+        soup = BeautifulSoup(html, 'lxml')
+        file = open('弹幕.txt', 'w', encoding='utf-8')
+        for d in soup.find_all(name='d'):
+            danmu = d.string
+            file.write(danmu)
+            file.write('\n')
+
+
+
+if __name__ == '__main__':
+    danmu = DanMu()
+    danmu.get_info()
+```
+
+![](https://routing-ospf.oss-cn-beijing.aliyuncs.com/image-20210107111606761.png)
+
+通过上面的代码只获取到了3000条弹幕，但是弹幕有6000多条，这也算是一种反爬措施。当我写到反爬的时候，会给大家做分析。
+
+# 最后
+
+本次分享到这里就结束了，如果你读到了这里，那么说明本篇文章对你还是有所帮助的，这也是我分享知识的初衷。
+
+没有什么是可以一蹴而就的，生活如此，学习亦是如此！
+
+**路漫漫其修远兮， 吾将上下而求索**。
+
+我是**啃书君**，一个专注于学习的人。**你懂的越多，你不懂的越多**，更多精彩内容我们下期再见！
+
